2007-12-22  Neal H. Walfield  <neal@gnu.org>

	* folio.h (FOLIO_PRIORITY_BITS): Define.
	(FOLIO_PRIORITY_MIN): Likewise.
	(FOLIO_PRIORITY_LRU): Likewise.
	(FOLIO_PRIORITY_MAX): Likewise.
	(FOLIO_GROUP_BITS): Likewise.
	(FOLIO_GROUP_NONE): Likewise.
	(FOLIO_GROUP_MIN): Likewise.
	(FOLIO_GROUP_MAX): Likewise.
	(struct folio_policy): New structure.
	(FOLIO_POLICY_INIT): Define.
	(FOLIO_POLICY_VOID): Likewise.
	(FOLIO_POLICY_DEFAULT): Likewise.
	(struct folio): Add field policy.
	(RM_folio_policy): Define.
	(folio_alloc): Take additional parameter policy.
	(FOLIO_POLICY_DELIVER): Define.
	(FOLIO_POLICY_DISCARDABLE_SET): Likewise.
	(FOLIO_POLICY_GROUP_SET): Likewise.
	(FOLIO_POLICY_PRIORITY_SET): Likewise.
	(FOLIO_POLICY_SET): Likewise.
	(folio_policy): New method.

2007-12-22  Neal H. Walfield  <neal@gnu.org>

	* RPC: New file.

2007-12-21  Neal H. Walfield  <neal@gnu.org>

	* rpc.h: Include <hurd/stddef.h>.  Don't include <string.h>.

	(RPCLOADARG): Don't require that the argument be a multiple of the
	machine word size.
	(RPCSTOREARG): Likewise.

	(RPC_COMMA, RPC_NOCOMMA, RPC_IF_COMMA): New macros.
	(RPC_SEND_MARSHAL): Use it here.
	(RPC_SEND_UNMARSHAL): Likewise.
	(RPC_REPLY_MARSHAL): Likewise.
	(RPC_REPLY_UNMARSHAL): Likewise.
	(RPC_): Likewise.
	
	(RPCLOAD): Change argument names to avoid inadvertent expansion.
	(RPCSTORE): Likewise.
	(RPC_ARGUMENTS): Likewise.
	(RPC_CHOP): Likewise.
	(RPC_GRAB2): Likewise.
	(RPC_GRAB): Likewise.
	(RPC_SEND_UNMARSHAL): Change variable names to avoid inadvertent
	expansion.
	(RPC_REPLY_UNMARSHAL): Likewise.

	* t-rpc.c: New file.
	* Makefile.am (TESTS): Add t-rpc.
	(t_rpc_CPPFLAGS): New variable.
	(t_rpc_SOURCES): Likewise.

2007-12-21  Neal H. Walfield  <neal@gnu.org>

	* folio.h: Include <hurd/cap.h>.

2007-12-18  Neal H. Walfield  <neal@gnu.org>

	* folio.h: Include <hurd/addr.h>, <hurd/startup.h> and <stdint.h>.
	(RM_folio_alloc, RM_folio_free, RM_folio_object_alloc,
	folio_alloc, folio_free, folio_object_alloc): Move here...