@@ -1,3 +1,12 @@
+2007-12-23  Neal H. Walfield  <neal@gnu.org>
+
+	* mutex.h (struct ss_lock_trace): Replace const with __const.
+	(ss_lock_trace_dump): Likewise.
+	(ss_mutex_trace_add): Likewise.
+	(ss_mutex_lock): Likewise.
+	(ss_mutex_unlock): Likewise.
+	(ss_mutex_trylock): Likewise.
+
 2007-12-22  Neal H. Walfield  <neal@gnu.org>
 
 	* folio.h (FOLIO_PRIORITY_BITS): Define.
